---
title: Entity Relationship Diagram Back-end Project
---
erDiagram
    Cliente {
      id_cliente int
      user varchar
      email varchar
      senha varchar
      telefone varchar
      id_admin int
    }

    Funcionario {
      id_funcionario int
      user varchar
      email varchar
      senha varchar
      cargo varchar
      salario decimal
      id_admin int
    }

    Venda {
      id_venda int
      id_funcionario int
      id_cliente int
    }

    Admin {
      id_admin int
      user varchar
      email varchar
      senha varchar
    }

    Produto {
      id_produto int
      nome varchar 
      descricao varchar
      qtd_estoque int
      preco decimal 
    }

    Produtos_venda{
      id_produtos_venda int
      id_venda int
      id_produto int
      quantidade int
      valor_total_produto decimal
    }

    Admin ||..|{ Funcionario : "Gerencia"
    Admin ||..|{ Cliente : "Gerencia"
    Funcionario ||..|{ Venda: "Realiza"
    Cliente||..|{ Venda: "Compra"
    Venda||..|{ Produtos_venda: "Possui"
    Produto||..|{ Produtos_venda: "Está contido"
    
